# gitvote

./: .gitattributes  .gitignore  .gitvote.yml  ADOPTERS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  OWNERS  README.md  artifacthub-repo.yml  index.yaml
.github/: dependabot.yml
.github/workflows/: build-images.yml  chart.yml  ci.yml  release.yml
chart/: values-staging.yaml  values.yaml
chart/templates/: dbmigrator_install_job.yaml  deployment.yaml  gitvote_deployment.yaml  gitvote_secret.yaml  gitvote_service.yaml  gitvote_serviceaccount.yaml  ingress.yaml  secret.yaml  service.yaml
charts/gitvote/: Chart.yaml  README.md  values.yaml
charts/gitvote/ci/: default-values.yaml
charts/gitvote/templates/: dbmigrator_job.yaml  gitvote_deployment.yaml  gitvote_ingress.yaml  gitvote_secret.yaml  gitvote_service.yaml
database/migrations/: Dockerfile  migrate.sh
database/migrations/functions/: 001_load_functions.sql
database/migrations/functions/util/: string_to_interval.sql
database/migrations/schema/: 001_initial.sql  002_checked_at.sql  003_issue_title.sql  004_update_results.sql
docs/config/: .gitvote.yml
docs/metadata/: .gitvote.yml
src/: cfg.rs  cfg_repo.rs  cfg_svc.rs  cmd.rs  commands.rs  conf.rs  db.rs  events.rs  github.rs  handlers.rs  main.rs  metadata.rs  processor.rs  results.rs  templates.rs  testutil.rs  tmpl.rs  votes.rs
src/graphql/: announcement_repo_query.graphql  create_discussion.graphql
src/testdata/: config-invalid.yml  config.yml  event-cmd-profile.json  event-cmd.json  event-no-cmd.json  event-pr-no-cmd.json
src/testdata/templates/: config-not-found.golden  config-profile-not-found.golden  invalid-config.golden  no-vote-in-progress-issue.golden  no-vote-in-progress-pr.golden  vote-cancelled-issue.golden  vote-cancelled-pr.golden  vote-checked-recently.golden  vote-closed-announcement.golden  vote-closed-failed.golden  vote-closed-passed.golden  vote-created-all-collaborators.golden  vote-created-with-teams-and-users.golden  vote-in-progress-issue.golden  vote-in-progress-pr.golden  vote-restricted.golden  vote-status-in-progress.golden
templates/: audit-vote-details.html  audit.html  config-not-found.md  config-profile-not-found.md  external-link-icon.html  index.html  invalid-config.md  no-vote-in-progress.md  vote-cancelled.md  vote-checked-recently.md  vote-closed-announcement.md  vote-closed.md  vote-created.md  vote-in-progress.md  vote-restricted.md  vote-status.md
