[package]
name = "gitvote"
description = "GitVote server"
version = "1.4.0"
license = "Apache-2.0"
edition = "2024"
rust-version = "1.90.0"

[dependencies]
anyhow = "1.0.100"
askama = { version = "0.14.0", features = ["serde_json"] }
async-channel = "2.5.0"
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["macros"] }
clap = { version = "4.5.48", features = ["derive"] }
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
figment = { version = "0.10.19", features = ["yaml", "env"] }
futures = "0.3.31"
graphql_client = { version = "0.14.0", features = ["reqwest"] }
hex = "0.4.3"
hmac = "0.12.1"
http = "1.3.1"
humantime = "2.3.0"
humantime-serde = "1.1.1"
ignore = "0.4.23"
jsonwebtoken = "9.3.1"
octocrab = "0.45.0"
openssl = { version = "0.10.73", features = ["vendored"] }
postgres-openssl = "0.5.1"
regex = "1.11.2"
reqwest = "0.12.23"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
thiserror = "2.0.16"
time = { version = "0.3.44", features = ["serde"] }
tokio = { version = "1.47.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "time",
] }
tokio-postgres = { version = "0.7.13", features = [
    "with-uuid-1",
    "with-serde_json-1",
    "with-time-0_3",
] }
tokio-util = { version = "0.7.16", features = ["rt"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[dev-dependencies]
http-body = "1.0.1"
hyper = "1.7.0"
mockall = "0.13.1"
